deploy: 2cc15b761ff297ac28ff930114271ad6837fc65d

--- a/student_portfolio/spring_24/student1/index.html
+++ b/student_portfolio/spring_24/student1/index.html
@@ -547,12 +547,12 @@
 
         <div class="article-content max-w-prose mb-20">
           <p>
-  <a href="https://math5760.github.io//student_portfolio/spring_24/student1/demo"
+  <a href="https://math5760.github.io//student_portfolio/spring_24/student1/demo.html"
     >Click here to view this notebook in full screen</a
   >
 </p>
 <iframe
-  src="https://math5760.github.io//student_portfolio/spring_24/student1/demo"
+  src="https://math5760.github.io//student_portfolio/spring_24/student1/demo.html"
   style="height:100vh;width:100vw;border:none;overflow:hidden;"
 ></iframe>
 
